--- a/forgot-your-password.html
+++ b/forgot-your-password.html
@@ -60,7 +60,7 @@
 			<div class="padded clearfix">
 				<form method="POST" action="we-sent-you-email.html">
 					<h3 class="discreet">Forgot your password?</h3>
-					<p class="form-note">We'll send you a link to reset it.</p><br />
+					<p class="form-note">We'll send you a link to reset it.</p>
 					<ul class="form-with-validation">
 						<li>
 							<label for="Email">Email Address <span class="required">*</span></label>
