css style fixes

--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -71,7 +71,7 @@
 						</li>
 						<li>
 							<label for="confirmNewPassword">Confirm New Password <span class="required">*</span></label>
-							<input data-val="true" data-val-required="Confirm New Password is required and must match New Password." id="confirmNewPassword" name="confirmNewPassword" tabindex="3" type="password" value="" class="textbox-checkmark" />
+							<input data-val="true" data-val-required="Confirm New Password is required and must match New Password." id="confirmNewPassword" name="confirmNewPassword" tabindex="3" type="password" value="" class="input-validation-error textbox-checkmark" />
 							<span class="ui-state-error-text field-validation-error" data-valmsg-for="confirmNewPassword" data-valmsg-replace="true">
 								<span for="confirmNewPassword" generated="true" class="" style="">your passwords don't match</span>
 							</span>
