--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -60,12 +60,12 @@
 			<div class="padded clearfix">
 				<form method="POST" action="we-sent-you-email.html">
 					<h3 class="discreet">Reset your password</h3>
-					<p class="form-note">Please answer one of your security questions to reset your password.</p>
-					<p>
-						Question<br>
-						<span generated="true">What city were you born in?</span>
-					</p>					
+					<p>Please answer one of your security questions to reset your password.</p>				
 					<ul class="form-with-validation">
+						<p>
+							Question<br>
+							<span generated="true">What city were you born in?</span>
+						</p>					
 						<li>
 							<label for="securityanswer">Answer <span class="required">*</span></label>
 							<input data-val="true" data-val-required="Answer is required." id="securityanswer" name="securityanswer" tabindex="1" type="text" value="" class="input-validation-error" />
