--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -65,7 +65,7 @@
 					</p>
 					<p>
 						Your leasing office can better help you at:<br>
-						555-555-5555 or email@archstone.com.
+						555-555-5555 or <a href="mailto:email@archstone.com">email@archstone.com</a>.
 					</p>
 					<br>					
 					<div class="back-arrow">
