--- a/activation-email-sent.html
+++ b/activation-email-sent.html
@@ -66,7 +66,7 @@
 					</p>
 					<p>
 						If you have an issue or don't receive the activation email, contact your leasing office at:<br>
-						555-555-5555 or email@archstone.com.
+						555-555-5555 or <a href="mailto:email@archstone.com">email@archstone.com</a>.
 					</p>
 					<br>
 					<div class="back-arrow">
