--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 					<h3>Sign In</h3>
 					<ul class="form-with-validation">
 						<li>
-							<label for="email">Email address <span class="required">*</span></label>
-							<input data-val="true" data-val-required="Email address is required." type="text" name="email" id="email" value="" class="input-validation-error">
+							<label for="email">Email Address <span class="required">*</span></label>
+							<input data-val="true" data-val-required="Email Address is required." type="text" name="email" id="email" value="" class="input-validation-error">
 							<span class="ui-state-error-text field-validation-error" data-valmsg-for="email" data-valmsg-replace="true">
-								<span for="email" generated="true" class="" style="">Email address is required.</span>
+								<span for="email" generated="true" class="" style="">Email Address is required.</span>
 							</span>
 						</li>
 						<li>
