--- a/select-lease.html
+++ b/select-lease.html
@@ -58,7 +58,7 @@
 		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>Select the lease you would like to open</span></h1>
 			<div class="padded clearfix">
-				<form method="POST" action="/">
+				<form method="POST" action="account-summary.html">
 					<ul class="form-with-validation">
 						<li>
 							<input id="lease1" name="lease1" tabindex="2" type="radio" value="" class="padded-left" />
