--- a/we-sent-you-email.html
+++ b/we-sent-you-email.html
@@ -65,7 +65,7 @@
 					</p>
 					<p>
 						If you have an issue or don't receive the password email, contact your leasing office at:<br>
-						555-555-5555 or email@archstone.com.
+						555-555-5555 or <a href="mailto:email@archstone.com">email@archstone.com</a>.
 					</p>
 					<br>
 					<div class="back-arrow">
