css style fixes

--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
 					<div class="remember-area">
 						<input type="checkbox" name="remember_email" id="remember-email">
 						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="#">Forgot password?</a></p>
+						<p><a href="forgot-your-password.html">Forgot password?</a></p>
 					</div>
 				</form>
 			</div>
