--- a/select-lease.html
+++ b/select-lease.html
@@ -41,7 +41,7 @@
   <script src="js/jquery-1.7.2.min.js"></script> 
 
 </head>
-<body class="medium-width">
+<body class="narrow-width">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
@@ -55,22 +55,22 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
-			<h1 class="box-title"><span>Select the lease you would like to open</span></h1>
+		<div class="squared-box clearfix">
+			<h1 class="box-title discreet"><span>Select the lease you would like to open</span></h1>
 			<div class="padded clearfix">
 				<form method="POST" action="account-summary.html">
 					<ul class="form-with-validation">
 						<li>
 							<input id="lease1" name="lease1" tabindex="2" type="radio" value="" class="padded-left" />
-							<label for="lease1">[ Apartment Address ] Customer Name [ Community ]</label>
+							<label for="lease1" class="discreet">[ Apartment Address ] Customer Name [ Community ]</label>
 						</li>
 						<li>
 							<input id="lease2" name="lease2" tabindex="3" type="radio" value="" class="padded-left" />							 
-							<label for="lease2">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
+							<label for="lease2" class="discreet">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
 						</li>
 						<li>
 							<input id="lease3" name="lease3" tabindex="4" type="radio" value="" class="padded-left" />							 
-							<label for="lease3">456 Spruce Street #12, Genvieve Cornhill, Archstone Utopia</label>
+							<label for="lease3" class="discreet">456 Spruce Street #12, Genvieve Cornhill, Archstone Utopia</label>
 						</li>
 					</ul>					
 					<div class="submit-area-right">
