--- a/signin-error.html
+++ b/signin-error.html
@@ -80,7 +80,7 @@
 					<div class="remember-area">
 						<input type="checkbox" name="remember_email" id="remember-email">
 						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="#">Forgot password?</a></p>
+						<p><a href="forgot-your-password.html">Forgot password?</a></p>
 					</div>
 				</form>
 			</div>
@@ -95,8 +95,8 @@
 		<div class="titled-box left clearfix small-box titled-box-right">
 			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
 				<a href="#" class="button-iphone"> &nbsp; </a>
+				<a href="#" class="button-droid"> &nbsp; </a>
 			</div>
 			<p class="box-footer"><span></span></p>
 		</div>
