--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -55,11 +55,11 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
+		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">
 				<form method="POST" action="select-a-lease.html">
-					<h3 class="discreet">Choose your new password</h3>
+					<h3>Choose your new password</h3>
 					<ul class="form-with-validation">
 						<li>
 							<label for="newPassword">New Password <span class="required">*</span></label>
@@ -96,8 +96,8 @@
 			<div class="titled-box left clearfix small-box titled-box-right">
 				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 				<div class="body clearfix">
-					<a href="#" class="button-droid"> &nbsp; </a>
 					<a href="#" class="button-iphone"> &nbsp; </a>
+					<a href="#" class="button-droid"> &nbsp; </a>
 				</div>
 				<p class="box-footer"><span></span></p>
 			</div>
