--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 				<p>Log in now to get started!</p>
 			</div>
 			<div class="body-right">
-				<form method="POST" action="select-a-lease.html">
+				<form method="POST" action="select-lease.html">
 					<h3>Sign In</h3>
+					<p class="error">Whoops! We didn't recognize your username or password.</p>
 					<ul class="form-with-validation">
 						<li>
 							<label for="email">Email Address <span class="required">*</span></label>
@@ -94,7 +95,7 @@
 					<div class="remember-area">
 						<input type="checkbox" name="remember_email" id="remember-email">
 						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="#">Forgot password?</a></p>
+						<p><a href="forgot-your-password.html">Forgot password?</a></p>
 					</div>
 				</form>
 			</div>
@@ -109,8 +110,8 @@
 		<div class="titled-box left clearfix small-box titled-box-right">
 			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
 				<a href="#" class="button-iphone"> &nbsp; </a>
+				<a href="#" class="button-droid"> &nbsp; </a>
 			</div>
 			<p class="box-footer"><span></span></p>
 		</div>
