--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -55,11 +55,11 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
+		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">
 				<form method="POST" action="we-sent-you-email.html">
-					<h3 class="discreet">Reset your password</h3>
+					<h3>Reset your password</h3>
 					<p>Please answer one of your security questions to reset your password.</p>				
 					<ul class="form-with-validation">
 						<p>
@@ -93,8 +93,8 @@
 			<div class="titled-box left clearfix small-box titled-box-right">
 				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 				<div class="body clearfix">
-					<a href="#" class="button-droid"> &nbsp; </a>
 					<a href="#" class="button-iphone"> &nbsp; </a>
+					<a href="#" class="button-droid"> &nbsp; </a>
 				</div>
 				<p class="box-footer"><span></span></p>
 			</div>
