--- a/something-went-wrong.html
+++ b/something-went-wrong.html
@@ -56,10 +56,10 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
+		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">				
-					<h3 class="discreet">Something went wrong!</h3>
+					<h3>Something went wrong!</h3>
 					<p>
 						We weren't able to confirm all of the information for your myarchstone.com account.				
 					</p>
@@ -83,8 +83,8 @@
 			<div class="titled-box left clearfix small-box titled-box-right">
 				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 				<div class="body clearfix">
-					<a href="#" class="button-droid"> &nbsp; </a>
 					<a href="#" class="button-iphone"> &nbsp; </a>
+					<a href="#" class="button-droid"> &nbsp; </a>
 				</div>
 				<p class="box-footer"><span></span></p>
 			</div>
