--- a/we-sent-you-email.html
+++ b/we-sent-you-email.html
@@ -55,10 +55,10 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
+		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">			
-					<h3 class="discreet">We sent you an email</h3>			
+					<h3>We sent you an email</h3>			
 					<p>
 						In the next few minutes you'll receive a link to reset your password.
 						Remember to check your spam folder if you don't see it right away.				
@@ -83,8 +83,8 @@
 			<div class="titled-box left clearfix small-box titled-box-right">
 				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
 				<div class="body clearfix">
-					<a href="#" class="button-droid"> &nbsp; </a>
 					<a href="#" class="button-iphone"> &nbsp; </a>
+					<a href="#" class="button-droid"> &nbsp; </a>
 				</div>
 				<p class="box-footer"><span></span></p>
 			</div>
