--- a/dont-have-account.html
+++ b/dont-have-account.html
@@ -55,7 +55,7 @@
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="squared-box clearfix">
+		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">
 				<form method="POST" action="activation-email-sent.html">
