--- a/contact-information.html
+++ b/contact-information.html
@@ -89,40 +89,43 @@
 					<div class="padded">
 						<ul class="form-with-validation">
 							<li>
-								<label for="email">Email Address</label>
+								<label for="email">Email Address<span class="required">*</span></label>
 								<span class="message-text">(for staying in touch)</span>
 								<input id="email" name="email" type="text" value="Billy.Bibbit@email.com">
 								<p>Billy.Bibbit@email.com</p>
 								<!-- This is a validation error. Uncomment to see how it looks -->
-								<!-- <span class="ui-state-error-text field-validation-error" data-valmsg-for="newPassword" data-valmsg-replace="true">
+								<span class="ui-state-error-text field-validation-error" data-valmsg-for="newPassword" data-valmsg-replace="true">
 									<span for="newPassword" generated="true" class="" style="">your password is not 6 characters</span>
-								</span> -->
+								</span>
 							</li>
 							<li>
-								<label for="email">Home Phone</label>
+								<label for="homephone">Home Phone</label>
 								<span class="message-text">(optional)</span>
 								<input id="homephone" name="homephone" type="text" value="555-555-5555">
 								<p>555-555-5555</p>
 							</li>
 							<li>
-								<label for="email">Home Phone</label>
-								<span class="message-text">(for staying in touch)</span>
-								<input id="email" name="email" type="text" value="Billy.Bibbit@email.com">
-								<p>Billy.Bibbit@email.com</p>
+								<label for="mobilephone">Mobile Phone</label>
+								<span class="message-text">(optional)</span>
+								<input id="mobilephone" name="mobilephone" type="text" value="">
+							</li>
+							<li>
+								<label for="workphone">Work Phone</label>
+								<span class="message-text">(optional)</span>
+								<input id="workphone" name="workphone" type="text" value="555-555-5555">
+								<p>555-555-5555</p>
+							</li>
+							<li>
+								<label for="workphone2">Work Phone</label>
+								<span class="message-text">(optional)</span>
+								<input id="workphone2" name="workphone2" type="text" value="">
+							</li>
+							<li>
+								<label for="faxphone">Fax Phone</label>
+								<span class="message-text">(optional)</span>
+								<input id="faxphone" name="faxphone" type="text" value="">
 							</li>
 						</ul>
-						<label for="homephone">Home Phone:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">555-555-5555</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="homephone" value="555-555-5555" /></div>
-						</div>
-						<div style="clear:both;"></div>
-						<label for="mobilephone">Mobile Phone:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">555-555-5555</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="mobilephone" value="555-555-5555" /></div>
-						</div>
-						<div style="clear:both;"></div>
 					</div>
 					<h2>Emergency Contact</h2>
 					<div class="content-padding">
