--- a/request-sent.html
+++ b/request-sent.html
@@ -51,13 +51,13 @@
 <body class="signed-in request-sent">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<script type="text/javascript">global.background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li class="active"><a href="service-request.html">Service</a></li>
@@ -67,7 +67,7 @@
 					<a href="#">Genevieve Cornhill</a>
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
-						<li><a href="#">Contact Information</a></li>
+						<li><a href="contact-information.html">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
