--- a/account-settings.html
+++ b/account-settings.html
@@ -61,13 +61,13 @@
 <body class="signed-in service-request">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<script type="text/javascript">Background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents" style="width:790px;">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li><a href="service-request.html">Service</a></li>
@@ -82,7 +82,7 @@
 					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
-						<li><a href="#">Contact Information</a></li>
+						<li><a href="contact-information.html">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
