--- a/contact-information.html
+++ b/contact-information.html
@@ -63,7 +63,7 @@
 					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
-						<li><a href="#">Contact Information</a></li>
+						<li><a href="contact-information.html">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
@@ -73,25 +73,25 @@
   </header>
 
   <div role="main" id="main" class="clearfix">
-		<div id="service-request" class="accordion-box squared-box clearfix switchable">
-			<h1 class="box-title">
-				<span class="submit-area-right">
-					<button type="submit" class="submit right">
-						<span>Edit</span>
-						<span class="end"> &nbsp; </span>
-					</button>
-				</span>
-				<span>CONTACT INFORMATION</span>
-			</h1>
-			<div class="squared-accordion" >
-				<form method="POST" action="select-a-lease.html">
+		<div id="service-request" class="accordion-box squared-box clearfix">
+			<form method="POST" action="select-a-lease.html" class="switchable" id="contact-info">
+				<h1 class="box-title">
+					<span class="submit-area-right">
+						<button type="submit" class="submit right">
+							<span>Edit</span>
+							<span class="end"> &nbsp; </span>
+						</button>
+					</span>
+					<span>CONTACT INFORMATION</span>
+				</h1>
+				<div class="squared-accordion multi-accordion" >
 					<h2>My Contact</h2>
-					<div class="padded">
+					<div>
 						<ul class="form-with-validation">
 							<li>
-								<label for="email">Email Address<span class="required">*</span></label>
+								<label for="myemail">Email Address<span class="required">*</span></label>
 								<span class="message-text">(for staying in touch)</span>
-								<input id="email" name="email" type="text" value="Billy.Bibbit@email.com">
+								<input id="myemail" name="myemail" type="text" value="Billy.Bibbit@email.com">
 								<p>Billy.Bibbit@email.com</p>
 								<!-- This is a validation error. Uncomment to see how it looks -->
 								<span class="ui-state-error-text field-validation-error" data-valmsg-for="newPassword" data-valmsg-replace="true">
@@ -99,90 +99,94 @@
 								</span>
 							</li>
 							<li>
-								<label for="homephone">Home Phone</label>
+								<label for="myhomephone">Home Phone</label>
 								<span class="message-text">(optional)</span>
-								<input id="homephone" name="homephone" type="text" value="555-555-5555">
+								<input id="myhomephone" name="myhomephone" type="text" value="555-555-5555">
 								<p>555-555-5555</p>
 							</li>
 							<li>
-								<label for="mobilephone">Mobile Phone</label>
+								<label for="mymobilephone">Mobile Phone</label>
 								<span class="message-text">(optional)</span>
-								<input id="mobilephone" name="mobilephone" type="text" value="">
+								<input id="mymobilephone" name="mymobilephone" type="text" value="">
+								<!-- VERY IMPORTANT! notice that <p>'s don't exist when the values don't exist -->
 							</li>
 							<li>
-								<label for="workphone">Work Phone</label>
+								<label for="myworkphone">Work Phone</label>
 								<span class="message-text">(optional)</span>
-								<input id="workphone" name="workphone" type="text" value="555-555-5555">
+								<input id="myworkphone" name="myworkphone" type="text" value="555-555-5555">
 								<p>555-555-5555</p>
 							</li>
 							<li>
-								<label for="workphone2">Work Phone</label>
+								<label for="myworkphone2">Work Phone</label>
 								<span class="message-text">(optional)</span>
-								<input id="workphone2" name="workphone2" type="text" value="">
+								<input id="myworkphone2" name="myworkphone2" type="text" value="">
 							</li>
 							<li>
-								<label for="faxphone">Fax Phone</label>
+								<label for="myfaxphone">Fax Phone</label>
 								<span class="message-text">(optional)</span>
-								<input id="faxphone" name="faxphone" type="text" value="">
+								<input id="myfaxphone" name="myfaxphone" type="text" value="">
 							</li>
 						</ul>
 					</div>
 					<h2>Emergency Contact</h2>
 					<div class="content-padding">
-						<label for="ername">Name:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">Nurse Ratched</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="ername" value="Nurse Ratched"/></div>
-						</div>
-						<label for="errelationship">Relationship:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">Personal Nurse</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="errelationship" value="Personal Nurse"/></div>
-						</div>
-						<label for="erhomephone">Home Phone:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">666-666-6666</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="erhomephone" value="666-666-6666" /></div>
-						</div>
-						<div style="clear:both;"></div>
+						<ul class="form-with-validation">
+							<li>
+								<label for="ername">Name<span class="required">*</span></label>
+								<span class="message-text">(for staying in touch)</span>
+								<input id="ername" name="ername" type="text" value="Nurse Ratched">
+								<p>Nurse Ratched</p>
+							</li>
+							<li>
+								<label for="errelationship">Relationship</label>
+								<input id="errelationship" name="errelationship" type="text" value="Personal Nurse">
+								<p>Personal Nurse</p>
+							</li>
+							<li>
+								<label for="ermobilephone">Home Phone</label>
+								<input id="ermobilephone" name="ermobilephone" type="text" value="666-666-6666">
+								<p>666-666-6666</p>
+							</li>
+							<li>
+								<label for="erworkphone">Email Address</label>
+								<span class="message-text">(optional)</span>
+								<input id="erworkphone" name="erworkphone" type="text" value="">
+							</li>
+						</ul>
 					</div>
 					<h2>Employer Contact</h2>
-					<div class="padded">
-						<label for="employmentstatus">Employment Status:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div" pad-below>Employed</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="employmentstatus" value="Employed" /></div>
-						</div>
-						<div style="clear:both;"></div>					
-						<label for="jobtitle">Job Title:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">Sourcerer</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="jobtitle" value="Sourcerer" /></div>
-						</div>
-						<div style="clear:both;"></div>
-						<label for="employername">Employer Name:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">Star Line</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="employername" value="Star Line" /></div>
-						</div>
-						<div style="clear:both;"></div>
-						<label for="employerphone">Employer Phone:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">777-777-7777</div>
-							<div class="left-form-div show-toggle-b"><input type="text" name="employerphone" value="777-777-7777" /></div>
-						</div>
-						<div style="clear:both;"></div>
-						<label for="employeraddress">Address:</label>
-						<div class="form-entry">
-							<div class="show-toggle-a left-form-div pad-below">1600 Pennsylvania Avenue<br>Northwest Washington DC 20500</div>
-							<div class="left-form-div show-toggle-b">
-								<input type="text" name="employeraddress" value="1600 Pennsylvania Avenue" /><br>
-								<input type="text" name="employercity" value="Washington DC" />
-								<select name="employerstate" /><option name="DC">DC</option></select>
-								<input type="text" name="employerzipcode" value="20500" />
-							</div>
-						</div>
-						<div style="clear:both;"></div>
+					<div>
+						
+						<ul class="form-with-validation">
+							<li>
+								<label for="employmentstatus">Employment Status</label>
+								<input type="text" name="employmentstatus" id="employmentstatus" value="Employed" >
+								<p>Employed</p>
+							</li>
+							<li>
+								<label for="jobtitle">Job Title</label>
+								<input type="text" name="jobtitle" id="jobtitle" value="Sorcerer" >
+								<p>Sorcerer</p>
+							</li>
+							<li>
+								<label for="employername">Employer Name</label>
+								<input type="text" name="employername" id="employername" value="Star Line" >
+								<p>Star Line</p>
+							</li>
+							<li>
+								<label for="employerphone">Employer Phone</label>
+								<input type="text" name="employerphone" id="employerphone" value="777-777-7777" >
+								<p>777-777-7777</p>
+							</li>
+							<li class="address">
+								<label for="employeraddress">Address</label>
+								<input type="text" name="employeraddress" value="1600 Pennsylvania Avenue" class="street" />
+								<input type="text" name="employercity" class="city" value="Washington DC" />
+								<select name="employerstate" class="state" /><option name="DC">DC</option></select>
+								<input type="text" name="employerzipcode" value="20500" class="zip" />
+								<p>1600 Pennsylvania Avenue<br>Northwest Washington DC 20500</p>
+							</li>
+						</ul>
 					</div>
 					
 					<div class="submit-area show-toggle-b">
@@ -190,8 +194,8 @@
 						<span style="width:50px;">&nbsp;</span>
 						<button type="submit" class="submit"><span>Save Changes</span><span class="end"> &nbsp; </span></button>
 					</div>					
-				</form>
-			</div>
+				</div>
+			</form>
 		</div>
   </div>
   <footer>
@@ -215,6 +219,16 @@
 	<!-- Specific to this page -->
   <script src="js/contact-information.js"></script>
 	
+	<script>
+	$(function(){
+		var defaultParams = {
+			switchable: $('.switchable'),
+			form: $('.switchable'),
+			toggleButton: $('.squared-box h1 .submit')
+		};
+		accounts.switchable(defaultParams);
+	});
+	</script>
   <!-- end scripts -->
 
 
