--- a/request-history-1.html
+++ b/request-history-1.html
@@ -46,7 +46,7 @@
 <body class="signed-in">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
 	<script src="js/browserimage.js"></script>
@@ -54,7 +54,7 @@
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li class="active">
@@ -70,7 +70,7 @@
 					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
 					<ul>
 						<li><a href="dialog-lease.html" class="cta-dialog" rel="request-history" title="Select the lease you would like to open">Switch to Different Lease</a></li>
-						<li><a href="#">Contact Information</a></li>
+						<li><a href="contact-information.html">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
