--- a/dont-have-account.html
+++ b/dont-have-account.html
@@ -128,7 +128,10 @@
   <script src="js/nav.js"></script>
 	
 	<!-- Specific to this page -->
+	<script src="js/account-register.js"></script>
+	
 	<!-- end scripts -->
+	
  <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
   <script>
