--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
 	<!-- All Scripts are in the bottom before the </body>. Except for jquery and modernizr -->
 	<!-- Use this in all pages -->
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
-  	<script src="js/jquery-1.7.2.min.js"></script>
+  <script src="js/jquery-1.7.2.min.js"></script>
 </head>
 <body class="medium-width">
 	<!-- The Stretchy Background Image -->
-	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
-  	</div>
+	<div id="background-image"><img class="source-image" src="images/bkgd_1.jpg" alt="Archstone"></div>
 	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
 	<script src="js/browserimage.js"></script>
 
