--- a/service-request.html
+++ b/service-request.html
@@ -48,7 +48,7 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
-	<script type="text/javascript">global.background.init(); </script>
+	<script src="js/browserimage.js"></script>
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
