--- a/select-lease.html
+++ b/select-lease.html
@@ -74,6 +74,8 @@
 						</li>
 					</ul>					
 					<div class="submit-area-right">
+						<button class="cancel"><span>Cancel</span><span class="end"> &nbsp; </span></button>
+						&nbsp;&nbsp;&nbsp;
 						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
 					</div>
 					
