mid-onetime payments

--- a/contact-information.html
+++ b/contact-information.html
@@ -50,7 +50,7 @@
 		<div class="primary-nav-contents" style="width:790px;">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li><a href="onetime-payment.html">Payment</a></li>
 				<li><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
