--- a/request-history.html
+++ b/request-history.html
@@ -59,7 +59,7 @@
 					<ul>
 						<li><a href="dialog-lease.html" class="cta-dialog" rel="request-history" title="Select the lease you would like to open">Switch to Different Lease</a></li>
 						<li><a href="contact-information.html">Contact Information</a></li>
-						<li><a href="#">Settings</a></li>
+						<li><a href="account-settings.html">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
 				</li>
@@ -70,7 +70,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li><a href="onetime-payment.html">Payment</a></li>
 				<li class="active">
 					<a href="service-request.html">Service</a>
 				</li>
