--- a/request-sent.html
+++ b/request-sent.html
@@ -59,7 +59,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li><a href="onetime-payment.html">Payment</a></li>
 				<li class="active"><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
@@ -68,7 +68,7 @@
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
 						<li><a href="contact-information.html">Contact Information</a></li>
-						<li><a href="#">Settings</a></li>
+						<li><a href="account-settings.html">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
 					</ul>
 				</li> -->
