--- a/service-request.html
+++ b/service-request.html
@@ -54,7 +54,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li><a href="onetime-payment.html">Payment</a></li>
 				<li class="active"><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#">Lease</a></li>
