changed select-a-lease links to select-lease

--- a/account-settings.html
+++ b/account-settings.html
@@ -95,7 +95,7 @@
 		<div id="service-request" class="accordion-box squared-box clearfix">
 			<h1 class="box-title"><span>ACCOUNT SETTINGS</span></h1>
 			<div >
-				<form method="POST" action="select-a-lease.html">
+				<form method="POST" action="select-lease.html">
 					<div class="section-header">
 						Select and answer security question(s)
 					</div>
