--- a/account-summary.html
+++ b/account-summary.html
@@ -113,7 +113,7 @@
 			
 			
 			<div >
-				<form method="POST" action="select-a-lease.html">
+				<form method="POST" action="select-lease.html">
 					<div class="section-header">
 						Select and answer security question(s)
 					</div>
