--- a/choose-new-password.html
+++ b/choose-new-password.html
@@ -58,7 +58,7 @@
 		<div class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="padded clearfix">
-				<form method="POST" action="select-a-lease.html">
+				<form method="POST" action="select-lease.html">
 					<h3>Choose your new password</h3>
 					<ul class="form-with-validation">
 						<li>
