--- a/signin-error.html
+++ b/signin-error.html
@@ -58,7 +58,7 @@
 				<p>Log in now to get started!</p>
 			</div>
 			<div class="body-right">
-				<form method="POST" action="select-a-lease.html" id="select-a-lease-firn">
+				<form method="POST" action="select-lease.html" id="select-a-lease-firn">
 					<h3>Please Sign In</h3>
 					<!-- <p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p> -->
 					<ul class="form-with-validation">
