--- a/contact-information.html
+++ b/contact-information.html
@@ -74,7 +74,7 @@
 
   <div role="main" id="main" class="clearfix">
 		<div id="service-request" class="accordion-box squared-box clearfix">
-			<form method="POST" action="select-a-lease.html" class="switchable" id="contact-info">
+			<form method="POST" action="select-lease.html" class="switchable" id="contact-info">
 				<h1 class="box-title">
 					<span class="submit-area-right">
 						<button type="submit" class="submit right">
