--- a/account-settings.html
+++ b/account-settings.html
@@ -51,15 +51,14 @@
 
   <header>
 		<!-- Primary Navigation -->
-		<div class="primary-nav-contents">
+		<div class="primary-nav-contents" style="width:790px;">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 			<ul class="primary-nav">
 				<li><a href="onetime-payment.html">Payment</a></li>
-				<li>
-					<a href="service-request.html">Service</a>
-				</li>
+				<li><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
-				<li><a href="#">Lease</a></li>
+				<li><a href="#" class="cta-lease">Lease</a></li>
+				<li><a href="#" class="active">Jane Smith</a></li>
 			</ul>
 		</div>
 		<!-- Dropdown Nav-->
@@ -162,7 +161,7 @@
 					</div>		
 				</div>
 				<p class="submit-area">
-					<button class="cancel"><span>Cancel Changes</span><span class="end"> &nbsp; </span></button>
+					<button type="button" class="cancel"><span>Cancel Changes</span><span class="end"> &nbsp; </span></button>
 					&nbsp;&nbsp;&nbsp;
 					<button type="submit" class="submit"><span>Save Changes</span><span class="end"> &nbsp; </span></button>
 				</p>				
@@ -173,7 +172,7 @@
 	  <div class="right">
 		<a href="/">ArchstoneApartments.com</a>
 	  </div>
-	  <div class="left">
+	  <div class="left-one-row">
 		<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
 		<a href="#">Privacy Policy</a>
 	  </div>
