--- a/request-sent.html
+++ b/request-sent.html
@@ -74,7 +74,6 @@
 				</li> -->
 			</ul>
 		</div>
-		<!-- /Primary Navigation -->
 		
 		<!-- Secondary Navigation -->
 		<div class="secondary-nav-contents">
@@ -83,7 +82,21 @@
 				<li><a href="request-history.html">Previous Requests</a></li>
 			</ul>
 		</div>
-		<!-- /Secondary Navigation -->
+
+		<!-- Dropdown -->
+		<div class="dropdown-nav-contents">
+			<ul class="dropdown-nav">
+				<li>
+					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
+					<ul>
+						<li><a href="dialog-lease.html" class="cta-dialog" rel="request-history" title="Select the lease you would like to open">Switch to Different Lease</a></li>
+						<li><a href="contact-information.html">Contact Information</a></li>
+						<li><a href="#">Settings</a></li>
+						<li><a href="index.html">Sign Out</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
   </header>
 
   <div role="main" id="main" class="clearfix">
